fix(master-layout): fix `overlay`'s `z-index` incompatibility with material

--- a/projects/oblique/src/styles/scss/core/_variables.scss
+++ b/projects/oblique/src/styles/scss/core/_variables.scss
@@ -54,7 +54,7 @@ $body-width:                  248px !default;
 
 $z-index-default:                 0 !default;
 $z-index-controls:               10 !default;
-$z-index-layout:                100 !default;
+$z-index-layout:                101 !default;
 $z-index-widget:                200 !default;
 $z-index-overlay:               300 !default;
 $z-index-overlay-top:           400 !default;
